# GLM-search-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/selvin_search/: config.py  logger.py  planning.py  server.py  sources.py  utils.py
src/selvin_search/providers/: __init__.py  model_online.py  zhipu.py
